Added nice styling

--- a/Polyglot Pro/Resources/Localizable.xcstrings
+++ b/Polyglot Pro/Resources/Localizable.xcstrings
@@ -9450,6 +9450,9 @@
         }
       }
     },
+    "No Questions Added" : {
+
+    },
     "Norwegian" : {
       "extractionState" : "manual",
       "localizations" : {
