--- a/Polyglot Pro/Resources/Localizable.xcstrings
+++ b/Polyglot Pro/Resources/Localizable.xcstrings
@@ -10753,132 +10753,132 @@
         }
       }
     },
-    "Own categories": {
-      "localizations": {
-        "ar": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "الفئات الخاصة"
+    "Own categories" : {
+      "localizations" : {
+        "ar" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "الفئات الخاصة"
           }
         },
-        "bn": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "নিজস্ব বিভাগ"
+        "bn" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "নিজস্ব বিভাগ"
           }
         },
-        "da": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Egne kategorier"
+        "da" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Egne kategorier"
           }
         },
-        "de": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Eigene Kategorien"
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Eigene Kategorien"
           }
         },
-        "es": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Categorías propias"
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Categorías propias"
           }
         },
-        "fi": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Omat kategoriat"
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Omat kategoriat"
           }
         },
-        "fr": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Catégories personnelles"
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Catégories personnelles"
           }
         },
-        "hi": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "स्वयं की श्रेणियाँ"
+        "hi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "स्वयं की श्रेणियाँ"
           }
         },
-        "id": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Kategori sendiri"
+        "id" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kategori sendiri"
           }
         },
-        "is": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Eigin flokkar"
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Eigin flokkar"
           }
         },
-        "it": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Categorie personali"
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Categorie personali"
           }
         },
-        "ja": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "独自のカテゴリ"
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "独自のカテゴリ"
           }
         },
-        "ko": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "나만의 카테고리"
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "나만의 카테고리"
           }
         },
-        "nb": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Egne kategorier"
+        "nb" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Egne kategorier"
           }
         },
-        "pa": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "ਆਪਣੀਆਂ ਸ਼੍ਰੇਣੀਆਂ"
+        "pa" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ਆਪਣੀਆਂ ਸ਼੍ਰੇਣੀਆਂ"
           }
         },
-        "pl": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Własne kategorie"
+        "pl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Własne kategorie"
           }
         },
-        "pt-BR": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Categorias próprias"
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Categorias próprias"
           }
         },
-        "sv": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Egna kategorier"
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Egna kategorier"
           }
         },
-        "uk": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "Власні категорії"
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Власні категорії"
           }
         },
-        "ur": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "ذاتی زمروں"
+        "ur" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ذاتی زمروں"
           }
         },
-        "zh-Hans": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "自定义分类"
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "自定义分类"
           }
         }
       }
@@ -13498,6 +13498,136 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "保存表达"
+          }
+        }
+      }
+    },
+    "Select Language": {
+      "localizations": {
+        "ar": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "اختر اللغة"
+          }
+        },
+        "bn": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "ভাষা নির্বাচন করুন"
+          }
+        },
+        "da": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Vælg sprog"
+          }
+        },
+        "de": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Sprache auswählen"
+          }
+        },
+        "es": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Seleccionar idioma"
+          }
+        },
+        "fi": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Valitse kieli"
+          }
+        },
+        "fr": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Sélectionner la langue"
+          }
+        },
+        "hi": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "भाषा चुनें"
+          }
+        },
+        "id": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Pilih Bahasa"
+          }
+        },
+        "is": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Veldu tungumál"
+          }
+        },
+        "it": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Seleziona lingua"
+          }
+        },
+        "ja": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "言語を選択"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "언어 선택"
+          }
+        },
+        "nb": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Velg språk"
+          }
+        },
+        "pa": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "ਭਾਸ਼ਾ ਚੁਣੋ"
+          }
+        },
+        "pl": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Wybierz język"
+          }
+        },
+        "pt-BR": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Selecionar idioma"
+          }
+        },
+        "sv": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Välj språk"
+          }
+        },
+        "uk": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Виберіть мову"
+          }
+        },
+        "ur": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "زبان منتخب کریں"
+          }
+        },
+        "zh-Hans": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "选择语言"
           }
         }
       }
